<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GlobaleVariablen" Id="{d0d4d186-f957-41a1-9828-2e9f40681378}">
    <Declaration><![CDATA[VAR_GLOBAL
	Master: 			AXIS_REF;
	Aufwickler: 		AXIS_REF;
	Abwickler: 			AXIS_REF;
	Fadenzugmotor		: AXIS_REF;		// Antrieb des Tänzers / Fadenzugausgleichssysmtems
	// Analog Input of EL3702 (Sample 0 ~ Sample 9 of Channel 1)
	aAnalogSamples_1 AT %I*: ARRAY[0..9] OF INT;
	// Analog Input of EL3702 (Sample 0 ~ Sample 9 of Channel 2)
	aAnalogSamples_2 AT %I*: ARRAY[0..9] OF INT;
	aAnalogSamplesReal_1: ARRAY[0..9] OF LREAL;
	aAnalogSamplesReal_2: ARRAY[0..9] OF LREAL;
	iAnalogSamplesAverageValue_1: LREAL := 0.36;
	iAnalogSamplesAverageValue_2: LREAL := 0.45;
	Reglerausgaenge: LREAL;
	ErrorTerm: LREAL;
	// Einheit (N)
	Sollkraft: LREAL := 10;
	Signal: LREAL;
	bPID_Regler_Switch: BOOL := FALSE;
	P_Regler_PseudoTorqCtrl_Out: LREAL;
	P_Regler_PTCVelocity_Out: LREAL;
	D_ReglerOut: LREAL;
	bI_Regler_Switch: BOOL := FALSE;
	bD_Regler_Switch: BOOL := FALSE;
	Fadenzugkraft_1: LREAL;
	Fadenzugkraft_2: LREAL;
	Sollposition: LREAL := 0;
	Istposition: LREAL;
	Stoerung: LREAL := 0;
	Stoerung_1: LREAL := 0;
	Stoerung_2: LREAL := 0;
	Positionsfehler: LREAL;
	KraftfehlerInPerzent: LREAL;
	stateAufwickler: Movestate_t;
	stateAbwickler: Movestate_t;
	xPunkt: LREAL := 360;
	MasterStart: BOOL;
	AufwicklerStart: BOOL;
	AbwicklerStart: BOOL;
	FadenmotorFreigabe: BOOL;
	MasterLaeuft: BOOL;
	AbwicklerLaeuft: BOOL;
	FadenzugHomingFertig: BOOL;
	FadenzugmotorLaeuft: BOOL;
	AufwicklerLaeuft: BOOL;
	Abwicklerstopp: BOOL;
	Aufwicklerstopp: BOOL;
	MasterStopp: BOOL;
	Straffunktion: LREAL;
	
	FadenmotorRegeln: BOOL:=FALSE;
	
	AbUndAufwicklersPosiabweichung: LREAL;
	AufwicklerJogStart: BOOL;
	FadenzugJogStart: BOOL;
	FadenzugmotorStopp: BOOL;
	NOT_AUS: BOOL;
	FadenzugmotorJogLaeuft: BOOL;
	AufwicklerJoglaeuft: BOOL;
	FadenzugmotorJogGes: LREAL;
	AufwicklerJogGes: LREAL;
	GearRatio: LREAL := 1;
	Regelungsmethode: STRING;
	v1: LREAL;
	v2: LREAL;
	ee:LREAL;//误差
	x1_hat:LREAL;//跟踪反馈值
	x2_hat:LREAL;//跟踪反馈值的而微分
	x3_hat:LREAL;//跟踪系统的扰动（总扰动）
	_u:LREAL;//输出值
	_u_neu: LREAL;
	u0:LREAL;//非线性组合系统输出
	
	ADRC_TD_r0:LREAL:=9000;
	ADRC_TD_h0:LREAL:=0.0001;
	// 3*wo
	ADRC_ESO_beta01:LREAL:=170;
	// 3*(wo^2)
	ADRC_ESO_beta02:LREAL:=5;
	// wo^3
	ADRC_ESO_beta03:LREAL:=0.01;
	b0:LREAL:=1.3;// 扰动补偿
	Referenzposition: LREAL := 90;
	ControlCycleTime: LREAL;
	P_Regler_Out_Abwickler: LREAL;
	I_Regler_Out_Abwickler: LREAL;
	I_Regler_Input_Abwickler: LREAL;
	D_Regler_Out_Abwickler: LREAL;
	PID_Output_After_Saturation_Abwickler: LREAL;
	//Kraftfehler: LREAL;
	PID_Output_After_Saturation_Fadenzugmotor: LREAL;
	Regler_Out_Fadenzugmotor: LREAL;
	P_Regler_Out_Fadenzugmotor: LREAL;
	I_Regler_Out_Fadenzugmotor: LREAL;
	D_Regler_Out_Fadenzugmotor: LREAL;
	I_Regler_Input_Fadenzugmotor: LREAL;
	// Grad
	MaxPosition: LREAL := 165;
	// Grad
	MinPosition: LREAL := 15;
	ADRC_Output:LREAL;
	KraftSensorNewValue: LREAL;
	KraftSensorOldValue: LREAL;
	Vorsteuerungsausgabe: LREAL;
	Kraftfehler: LREAL;
	KraftreglerOutput: LREAL;
	PID_Output_Old: ARRAY[0..20000] OF LREAL;
	ILC_Out: LREAL;
	k: INT := 2;
	Drehzahl: LREAL;
	u_new: LREAL;
	ILC_F_Out: LREAL;
	i:LREAL;
	LernenFertig: BOOL;
	ILC_EinAus:BOOL;
	neu_xPunkt: LREAL;
	alt_xPunkt: LREAL := xPunkt;
	xPunkt_geaendert: BOOL;
	u_Old: ARRAY[0..20000] OF LREAL;
	e_Old: ARRAY[0..20000] OF LREAL;
	count: INT;
	fla:BOOL:=FALSE;
	ADRC_ESO_h: LREAL := 0.0001;
	TD_Switch: BOOL;
	DTD_CTD: BOOL;
	E_Switch: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>