<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="ILC" Id="{a9bae5d1-b9ee-4137-9da3-6e167f6894bd}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ILC
VAR
	e_new: LREAL;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF LernenFertig = FALSE THEN
	e_new := GlobaleVariablen.Sollkraft - GlobaleVariablen.Fadenzugkraft_2;
	IF (e_new < (GlobaleVariablen.Sollkraft - 1)) OR (e_new > (GlobaleVariablen.Sollkraft + 1)) THEN
		u_new := u_Old[k] - 0.2 * e_new;
	ELSIF (e_new >= (GlobaleVariablen.Sollkraft - 1)) AND (e_new <= (GlobaleVariablen.Sollkraft + 1)) THEN
		u_new := u_Old[k];
	END_IF
	//PRG_MovingAverage_1();// Moving Average Filter
	
	//Verwendung der "heutigen Daten" als Steuersignal
	ILC_Out := u_new;
	IF ABS(alt_xPunkt) > 180 AND ABS(alt_xPunkt) <= 400 THEN
		IF ILC_Out>0 THEN
			ILC_Out := 0;
		ELSIF ILC_Out < 0 AND  ILC_Out < -2 * e_new THEN
			ILC_Out := -2 * e_new;
		END_IF
	ELSIF ABS(alt_xPunkt) > 400 THEN
		IF ILC_Out>0 AND ILC_Out > - 0.5*e_new THEN
			ILC_Out := - 0.5*e_new;
		ELSIF ILC_Out < 0 AND  ILC_Out < -2 * e_new THEN
			ILC_Out := -2 * e_new;
		END_IF
	END_IF
	
	//"heutige Daten" als "alte Daten" sperchern
	u_Old[k] := ILC_Out;
	e_Old[k] := e_new;
	
	IF ABS(alt_xPunkt) <= 180 THEN
		IF ABS(e_new) > 1 THEN
			LernenFertig := FALSE;
			count := 0;
		ELSE 
			count := count + 1;
		END_IF 
		
		IF count >= 1999 THEN
			LernenFertig := TRUE;
		END_IF
		
	ELSIF ABS(alt_xPunkt) > 180 AND ABS(alt_xPunkt) <= 400 THEN
		IF ABS(e_new) > 2 THEN
			LernenFertig := FALSE;
			count := 0;
		ELSE 
			count := count + 1;
		END_IF 
		
		IF count >= 1999 THEN
			LernenFertig := TRUE;
		END_IF
	ELSIF ABS(alt_xPunkt) > 400 THEN
		IF ABS(e_new) > 4 THEN
			LernenFertig := FALSE;
			count := 0;
		ELSE 
			count := count + 1;
		END_IF 
		
		IF count >= 1999 THEN
			LernenFertig := TRUE;
		END_IF
	END_IF
ELSE
	ILC_Out := u_Old[k];
END_IF

IF ABS(alt_xPunkt) <= 180 THEN
	IF ABS(GlobaleVariablen.Sollkraft - GlobaleVariablen.Fadenzugkraft_2) > 1 THEN
		LernenFertig := FALSE;
	END_IF
ELSIF ABS(alt_xPunkt) > 180 AND ABS(alt_xPunkt) <= 400 THEN
	IF ABS(GlobaleVariablen.Sollkraft - GlobaleVariablen.Fadenzugkraft_2) > 2.3 THEN
		LernenFertig := FALSE;
	END_IF
ELSIF ABS(alt_xPunkt) > 400 THEN
	IF ABS(GlobaleVariablen.Sollkraft - GlobaleVariablen.Fadenzugkraft_2) > 4 THEN
		LernenFertig := FALSE;
	END_IF
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="ILC">
      <LineId Id="1501" Count="0" />
      <LineId Id="1673" Count="0" />
      <LineId Id="1605" Count="0" />
      <LineId Id="1680" Count="0" />
      <LineId Id="1678" Count="0" />
      <LineId Id="1608" Count="0" />
      <LineId Id="1602" Count="0" />
      <LineId Id="1630" Count="0" />
      <LineId Id="1633" Count="0" />
      <LineId Id="1628" Count="0" />
      <LineId Id="1782" Count="6" />
      <LineId Id="1790" Count="0" />
      <LineId Id="1792" Count="3" />
      <LineId Id="1791" Count="0" />
      <LineId Id="1687" Count="0" />
      <LineId Id="1683" Count="0" />
      <LineId Id="1634" Count="0" />
      <LineId Id="1648" Count="1" />
      <LineId Id="1729" Count="0" />
      <LineId Id="1658" Count="0" />
      <LineId Id="1747" Count="8" />
      <LineId Id="1746" Count="0" />
      <LineId Id="1622" Count="0" />
      <LineId Id="1718" Count="0" />
      <LineId Id="1756" Count="8" />
      <LineId Id="1719" Count="0" />
      <LineId Id="1735" Count="0" />
      <LineId Id="1737" Count="8" />
      <LineId Id="1736" Count="0" />
      <LineId Id="1625" Count="0" />
      <LineId Id="1623" Count="1" />
      <LineId Id="1603" Count="0" />
      <LineId Id="1771" Count="0" />
      <LineId Id="1663" Count="0" />
      <LineId Id="1769" Count="1" />
      <LineId Id="1656" Count="0" />
      <LineId Id="1772" Count="0" />
      <LineId Id="1774" Count="1" />
      <LineId Id="1773" Count="0" />
      <LineId Id="1776" Count="2" />
      <LineId Id="1600" Count="0" />
      <LineId Id="1779" Count="0" />
      <LineId Id="166" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>